--- a/Bank/Bank.csproj
+++ b/Bank/Bank.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Funcionario\Auxiliar.cs" />
+    <Compile Include="Funcionario\Desenvolvedor.cs" />
+    <Compile Include="Funcionario\Designer.cs" />
     <Compile Include="Funcionario\Diretor.cs" />
     <Compile Include="Funcionario\Funcionario.cs" />
+    <Compile Include="Funcionario\GerenteDeConta.cs" />
     <Compile Include="GerenciadorBonificacao.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
