--- a/Bank/Bank.csproj
+++ b/Bank/Bank.csproj
@@ -48,11 +48,12 @@
     <Compile Include="Funcionario\Designer.cs" />
     <Compile Include="Funcionario\Diretor.cs" />
     <Compile Include="Funcionario\Funcionario.cs" />
+    <Compile Include="Funcionario\FuncionarioAutenticavel.cs" />
     <Compile Include="Funcionario\GerenteDeConta.cs" />
     <Compile Include="GerenciadorBonificacao.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sistemas\Autenticavel.cs" />
+    <Compile Include="Sistemas\IAutenticavel.cs" />
     <Compile Include="Sistemas\SistemaInterno.cs" />
   </ItemGroup>
   <ItemGroup>
